; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/kdc/extr_kerberos5.c__kdc_fix_time.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/kdc/extr_kerberos5.c__kdc_fix_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_TIME = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_kdc_fix_time(i64** %0) #0 {
  %2 = alloca i64**, align 8
  store i64** %0, i64*** %2, align 8
  %3 = load i64**, i64*** %2, align 8
  %4 = load i64*, i64** %3, align 8
  %5 = icmp eq i64* %4, null
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i64**, i64*** %2, align 8
  %8 = load i64*, i64** %7, align 8
  %9 = call i32 @ALLOC(i64* %8)
  %10 = load i64, i64* @MAX_TIME, align 8
  %11 = load i64**, i64*** %2, align 8
  %12 = load i64*, i64** %11, align 8
  store i64 %10, i64* %12, align 8
  br label %13

13:                                               ; preds = %6, %1
  %14 = load i64**, i64*** %2, align 8
  %15 = load i64*, i64** %14, align 8
  %16 = load i64, i64* %15, align 8
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %22

18:                                               ; preds = %13
  %19 = load i64, i64* @MAX_TIME, align 8
  %20 = load i64**, i64*** %2, align 8
  %21 = load i64*, i64** %20, align 8
  store i64 %19, i64* %21, align 8
  br label %22

22:                                               ; preds = %18, %13
  ret void
}

declare dso_local i32 @ALLOC(i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
